fixed letter spacing in h1

--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@ h2 {
 
 h1 {
   font-size: 56px;
-  letter-spacing: -1.68px;
+  letter-spacing: normal;
   margin: 32px 0;
   font-family: "Dancing Script", cursive;
   margin-top: 0;
